Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Incompatable Changes]
  - Removed support for Perls before v5.10.1.

  [Tests]
  - Added more tests.

v0.2.2    2018-12-06 18:00:47+00:00 Europe/London
  [Other]
  - Added recommended minimum version of Types::Const.

  - Recommend Type::Tiny::XS.

v0.2.1    2018-11-16 18:28:00+00:00 Europe/London
  [Documentation]
  - Added a ROADMAP section for planned changes.

  [Tests]
  - Added more tests.

v0.2.0    2018-11-10 23:03:30+00:00 Europe/London
  [Enhancements]
  - Add support for write-once attributes.

  - Dies if a trigger is added to a constant attribute.

  [Bug Fixes]
  - Use version module for older Perls.

  [Documentation]
  - Updated ABSTRACT and POD accordingly.

  [Toolchain]
  - Use a different Pod::Coverage plugin.

v0.1.4    2018-11-10 12:27:54+00:00 Europe/London
  [Documentation]
  - Fixed typo.

v0.1.3    2018-11-10 12:23:52+00:00 Europe/London
  [Documentation]
  - Credited ideas for the module to Kang-min Liu 劉康民 <gugod@gugod.org>.

  [Toolchain]
  - Removed some redundant dependencies.

  [Other]
  - Bumped minimum version of Types::Const.

v0.1.2    2018-11-10 01:30:19+00:00 Europe/London
  [Bug Fixes]
  - Actually set the coercion.

  [Documentation]
  - Elaborated on what this is equivalent to.

v0.1.1    2018-11-10 00:28:47+00:00 Europe/London
  [Bug Fixes]
  - Specified a minimum version of Types::Const.

v0.1.0    2018-11-10 00:25:46+00:00 Europe/London
  - Initial release.